--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>🔴 Tricolor SP</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
@@ -11,7 +12,7 @@
         <p>Notícias atualizadas do São Paulo FC</p>
     </header>
 
-    <main id="noticias"></main>
+    <main id="noticias">Carregando notícias...</main>
 
     <script src="script.js"></script>
 </body>
