--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
+        <img src="logo_morumbi.png" alt="Morumbi" class="logo">
         <h1>Tricolor SP</h1>
-        <p>Notícias atualizadas do São Paulo FC</p>
+        <p>Notícias atualizadas do São Paulo Futebol Clube</p>
     </header>
 
     <main id="noticias">Carregando notícias...</main>
