--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tricolor-SP</title>
+    <title>Tricolor-SP - Notícias</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Bem-vindo ao Tricolor-SP! 🚀🔥</h1>
-    <p>Esse é o início do projeto. Vamos construir juntos!</p>
+    <h1>Tricolor-SP - Últimas Notícias 🚀🔥</h1>
+    
+    <div id="noticias">
+        <p>Carregando notícias...</p>
+    </div>
+
+    <script src="js/noticias.js"></script>
 </body>
 </html>
