--- a/index.html
+++ b/index.html
@@ -3,16 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tricolor-SP - Notícias</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Blog Tricolor-SP</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 20px; padding: 0; background-color: #f4f4f4; }
+        .container { max-width: 800px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        .post { margin-bottom: 20px; padding: 15px; border-bottom: 1px solid #ddd; }
+        .post img { width: 100%; border-radius: 8px; }
+        .post h2 { color: #333; }
+        .post p { color: #666; }
+    </style>
 </head>
 <body>
-    <h1>Tricolor-SP - Últimas Notícias 🚀🔥</h1>
-    
-    <div id="noticias">
-        <p>Carregando notícias...</p>
+    <div class="container">
+        <h1>Blog Tricolor-SP</h1>
+        <div id="posts"></div>
     </div>
 
-    <script src="js/noticias.js"></script>
+    <script>
+        async function carregarNoticias() {
+            const response = await fetch('/api/noticias'); // API que gera títulos e subtítulos
+            const noticias = await response.json();
+
+            const postsContainer = document.getElementById('posts');
+            postsContainer.innerHTML = '';
+
+            noticias.forEach(noticia => {
+                const post = document.createElement('div');
+                post.classList.add('post');
+                post.innerHTML = `
+                    <h2>${noticia.titulo}</h2>
+                    <p>${noticia.subtitulo}</p>
+                    <img src="${noticia.imagem}" alt="Imagem relacionada">
+                `;
+                postsContainer.appendChild(post);
+            });
+        }
+
+        carregarNoticias();
+    </script>
 </body>
 </html>
